# cli-updater

./: Cargo.toml  README.md  RELEASE.md  USAGE_EXAMPLES.md  build.rs
.github/workflows/: release.yml  tag-release.yml
scripts/: release.sh
src/: main.rs
updater/: package.json  wrangler.jsonc
