[package]
name = "cli-updater"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "A tool for updating CLI applications"
repository = "https://github.com/yourusername/cli-updater"
readme = "README.md"
keywords = ["cli", "updater", "tool"]
categories = ["command-line-utilities"]
build = "build.rs"

[dependencies]

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }
